# StockMarket-Analysis-and-Prediction

./: .gitignore  Cargo.toml  Readme.md  app.py  docker-compose.yml  index.html
frontend/: Dockerfile  README.md  app.py  requirements.txt
frontend/static/css/: style.css
frontend/templates/: data_selection.html  history_of_trades.html  login.html  plot_list.html  sell_buy.html  streaming.html
matching_engine/: Dockerfile  engine.py  run_engine.sh  run_redis.sh
matching_engine_kafka/: run_kafka.sh  start-kafka.sh
matching_engine_postgres/: Dockerfile  create_table.sql
matching_engine_redis/: redis-cluster-create.sh
stock_api/: Cargo.toml  Dockerfile  run.sh  shutdown.sh
stock_api/src/: main.rs
stock_api/src/args/: mod.rs
stock_api/src/db/: mod.rs
stock_api/src/models/: mod.rs
stock_api/src/routes/: mod.rs  price.rs  tokens.rs
stock_api/src/utils/: streaming.rs
stock_api_cassandra/: Dockerfile  create_tables.cql  entrypoint.sh
stock_api_kafka/: start-kafka.sh
stream/: stream_processing.py
stream/kafka-checkpoint/: .metadata.crc  metadata
stream/kafka-checkpoint/commits/: .1.crc  .11.crc  .12.crc  .13.crc  .14.crc  .2.crc  .3.crc  .4.crc  .6.crc  .7.crc  .9.crc  1  10  12  13  14  2  3  4  5  8  9
stream/kafka-checkpoint/offsets/: .0.crc  .1.crc  .10.crc  .11.crc  .12.crc  (+29 more)
stream/kafka_checkpoint/: .metadata.crc  metadata
templates/: login.html  plot_list2.html
test/: Dockerfile  producer.py  run_producer.sh
test/matching_engine/: Dockerfile  producer.py
user-info/: Dockerfile  README.md  docker-compose.yml  schema.sql
user-info/app/: app.py  user-history.py
user_info/app/: app.py
(+2588 files in other folders)
