[package]
name = "stock_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["default", "macros"] }
reqwest = { version = "0.12.3", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full", "rt-multi-thread"] }
thiserror = "1.0.59"
anyhow = { version = "1.0.82", features = ["backtrace"] }
clap = { version = "4.5.4", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
http = "1.1.0"
scylla = { version = "0.12.0", features = ["chrono"] }
lazy_static = "1.4.0"
rdkafka = { version = "0.36.2", features = ["cmake-build", "tokio"] }
